# orca-bot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust.yml
src/: cli.rs  encoding.rs  history.rs  main.rs  mastodon.rs  parser.rs  vm.rs
