[package]
name = "orca-bot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pferreir/orca-bot"
description = "A bot which renders Orca projects"
authors = ["Pedro Ferreira <pedro@turbofish.cc>"]
readme = "README.md"

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.5", features = ["derive", "env"] }
env_logger = "^0.11"
log = "^0.4"
zerocopy = "^0.8"

varvara = { path = "./contrib/raven/raven-varvara", package = "raven-varvara" }
tempfile = "^3.15"
megalodon = "^0.15"
tokio = "^1.42"
regex = "^1.11"
thiserror = "^2.0"
htmd = "^0.1"
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
csv = "^1.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
uxn = { path = "./contrib/raven/raven-uxn", package = "raven-uxn", features = ["native"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
uxn = { path = "./contrib/raven/raven-uxn", package = "raven-uxn" }
